@@ -7,6 +7,7 @@ import com.cojac.storyteller.service.RedisService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -22,11 +23,15 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
+
+    @Value("${server.deployed-url}")
+    private String deployedUrl;
 
     private final AuthenticationConfiguration authenticationConfiguration;
     private final JWTUtil jwtUtil;
@@ -35,6 +40,9 @@ public class SecurityConfig {
     private final CustomAuthenticationEntryPoint customAuthenticationEntryPoint;
     private final LocalUserRepository localUserRepository;
     private final SocialUserRepository socialUserRepository;
+
+    @Value("${management.endpoints.web.base-path}")
+    private String endpoints;
 
     // AuthenticationManager Bean 등록
     @Bean
@@ -59,8 +67,8 @@ public class SecurityConfig {
 
                         CorsConfiguration configuration = new CorsConfiguration();
 
-                        configuration.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
-                        configuration.setAllowedMethods(Collections.singletonList("*"));
+                        configuration.setAllowedOrigins(List.of("http://localhost:3000", deployedUrl));
+                        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
                         configuration.setAllowCredentials(true);
                         configuration.setAllowedHeaders(Collections.singletonList("*"));
                         configuration.setMaxAge(3600L);
@@ -91,7 +99,8 @@ public class SecurityConfig {
                         .requestMatchers("/username/verifications", "/emails/verification-requests", "/emails/verifications").permitAll()
                         .requestMatchers("/kakao-login", "/google-login").permitAll()
                         .requestMatchers("/reissue").permitAll()
-                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/storyTeller-api/**").permitAll()
+                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/storyteller-api/**").permitAll()
+                        .requestMatchers(endpoints+"/**").permitAll()
                         .anyRequest().authenticated());
 
         // 인증/인가와 관련된 예외 처리
